--- a/hw-01-components/package.json
+++ b/hw-01-components/package.json
@@ -2,7 +2,7 @@
   "name": "hw-01-components",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://andriymakohin.github.io/goit-react/hw-01-components",
+  "homepage": "https://andriymakohin.github.io/goit-react/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
